--- a/src/a/cap/pczero/Makefile
+++ b/src/a/cap/pczero/Makefile
@@ -4,7 +4,7 @@ BIN=pc.img
 SRC=pc.cc file.cc main.cc
 CC=gcc
 CW=-Wall -Wextra -Wno-int-to-pointer-cast
-CF=-nostdlib -Wl,--oformat,binary -Wl,-Ttext,0x7c00 -O1
+CF=-nostdlib -Wl,--oformat,binary -Wl,-Ttext,0x7c00 -O1 # -mstackrealign
 
 all:	clean build print display
 
