--- a/a/.classpath
+++ b/a/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.31-bin.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.31-bin.jar" sourcepath="/Users/calin/Downloads/mysql-connector-java-5.1.31/src">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/calin/Downloads/mysql-connector-java-5.1.31/docs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
