--- a/a/.classpath
+++ b/a/.classpath
@@ -8,5 +8,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/aws-java-sdk-1.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.2.4.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.2.4.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
