--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.31-bin.jar" sourcepath="/Users/calin/Downloads/mysql-connector-java-5.1.31/src">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Users/calin/Downloads/mysql-connector-java-5.1.31/docs/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.31-bin.jar"/>
 	<classpathentry kind="lib" path="lib/aws-java-sdk-1.8.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.3.4.jar"/>
