--- a/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
+++ b/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
@@ -1,14 +1,71 @@
 [General]
 IsFirstRun=0
-filedialog-path=/home/htp
+filedialog-path=/home/c/downloads
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1~\0\0\x1^\0\0\x3\xd9\0\0\x1\xa3\0\0\x1\x7f\0\0\x1_\0\0\x3\xd8\0\0\x1\xa2\0\0\0\0\0\0\0\0\x5V)
+
+[Bookmarks]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xd1\0\0\0\xf4\0\0\x3\x85\0\0\x2\r\0\0\x1\xd2\0\0\0\xf5\0\0\x3\x84\0\0\x2\f\0\0\0\0\0\0\0\0\x5V)
+
+[Epanel]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xde\0\0\0\xaf\0\0\x3x\0\0\x2Q\0\0\x1\xdf\0\0\0\xb0\0\0\x3w\0\0\x2P\0\0\0\0\0\0\0\0\x5V)
 
 [FullScreen]
 pos=@Point(495 696)
 screen=@Rect(0 0 1366 768)
+wide=false
 
 [MainWindow]
-pl-dock-status=true
+AdvToolbar=
+FSCtoolbar="0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+InputToolbar="43;33-4;44;"
+MainToolbar1=
+MainToolbar2="3-4;5-4;0-4;6-4;4-4;7;9;10;20;13-4;19;14-4;42-4;34-4;35-4;"
+QtStyle=System's default
+ShowRemainingTime=false
+ToolbarPos=false
 adv-controls=0
-bgSize=@Size(400 0)
-playlistSize=@Size(-1 -1)
+bgSize=@Size(602 0)
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\0\0\0\0)
+pl-dock-status=false
+playlist-visible=false
+playlistSize=@Size(-1 -1)
+status-bar-visible=false
+
+[Mediainfo]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\x7f\0\0\0\x88\0\0\x3\xd8\0\0\x2y\0\0\x1\x80\0\0\0\x89\0\0\x3\xd7\0\0\x2x\0\0\0\0\0\0\0\0\x5V)
+
+[OpenDialog]
+advanced=false
+size=@Size(526 400)
+
+[Playlist]
+headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x1\xff\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
+leftSplitterGeometry=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc0\0\0\0\x80\x1\0\0\0\x4\x1\0\0\0\x2\x1)
+splitterSizes=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\x2T\x1\0\0\0\x4\x1\0\0\0\x1\x1)
+view-mode=1
+zoom=0
+
+[Preferences]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2&\0\0\0\x1b\0\0\x5G\0\0\x2\xd8\0\0\x2'\0\0\0\x1c\0\0\x5\x46\0\0\x2\xd7\0\0\0\0\0\0\0\0\x5V)
+
+[RecentsMRL]
+list=file:///home/c/downloads/youtube/politico%20news%2002_20_2016%20%20Donald%20Trump%20softens%20his%20tone%20after%20feud%20with%20Pope%20Francis-CtfeewthGsU.3gp, file:///home/c/downloads/youtube/politico%20news%2002_20_2016%20%20Donald%20Trump%20softens%20his%20tone%20after%20feud%20with%20Pope%20Francis-CtfeewthGsU.3gp.part, file:///home/c/downloads/youtube/Judge%20To%20Hear%20Case%20On%20Cruz%20Eligibility%20-%20The%20Kelly%20File-vyUQonYief4.3gp.part, file:///home/c/downloads/youtube/Kasich%20-%20Spirit%20of%20America%20is%20about%20connecting%20with%20others-7Yy4lj2R8cg.3gp.part, file:///home/c/downloads/youtube/Killer%20Mike%20Weighs%20In%20On%20Hot%20Topics%20_%20After%20The%20View-dKOFM9udZ6U.3gp, file:///home/c/downloads/youtube/MORNING%20JOE%202%2019%202016%20Was%20the%20pope%20%27over%20his%20skis%27%20on%20Trump%20remark-Hg5seqnP3Xg.3gp.part, file:///home/c/downloads/youtube/The%20Infowars%20Nightly%20News.The%20Pope%20Just%20Wants%20To%20Keep%20His%20Walls%20FULLSHOW-KKkKtDRKUUA.3gp.part, file:///home/c/downloads/youtube/FULL%20CNN%20GOP%20Town%20Hall%20-%20John%20Kasich%20P1%2C%20CNN%20Republican%20Presidential%20Town%20Hall%20February%2018%2C%202016-eQlYWVyB_2w.3gp, "file:///home/c/downloads/youtube/FULL%20MSNBC%20Donald%20Trump%20Town%20Hall%20P2,%20South%20Carolina%20February%2017,%202016-DsWmnGXwdhY.3gp", file:///home/c/downloads/youtube/The%20Death%20of%20Economic%20Recovery%20_%20Peter%20Schiff%20and%20Stefan%20Molyneux-nwwH_roz-Fc.3gp.part, file:///home/c/downloads/youtube/The%20Daily%20Show%20-%20Podium%20Pandemonium%20at%20the%20New%20Hampshire%20Primary-G_UKmaY6Gm0.3gp.part, file:///home/c/downloads/youtube/Shillue%20-%20Can%20%27artists%27%20do%20whatever%20they%20want-mGUObZCYUNY.3gp.part, file:///home/c/downloads/youtube/saved/Mad%20Max%20Fury%20Road%20-%20Immortan%20Joe%20Speech-aBD30p1tUgg.mp4, trash:///Donald%20Trump%20Softens%20His%20Tone%20After%20Sharp%20Feud%20With%20Popes%20Francis%20-%20Outnumbered-kUdUJG8fvfE.3gp, file:///home/c/downloads/youtube/Killer%20Mike%20Weighs%20In%20On%20Hot%20Topics%20_%20After%20The%20View-dKOFM9udZ6U.3gp.part, file:///home/c/downloads/youtube/FULL%20MSNBC%20Donald%20Trump%20Town%20Hall%20P1%2C%20South%20Carolina%20February%2017%2C%202016-Us9GUHw4lio.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20Softens%20His%20Tone%20After%20Sharp%20Feud%20With%20Popes%20Francis%20-%20Outnumbered-kUdUJG8fvfE.3gp.part, file:///home/c/downloads/youtube/RACHEL%20MADDOW%202%2019%202016%20PODCAST%20FULL%20%C4%B0NTERV%C4%B0EW-SJxAcAEXOk4.3gp, file:///home/c/downloads/youtube/Killer%20Mike%20Responds%20to%20Outrage%20Over%20Hillary%20Clinton%20Comments%20_%20The%20View-KljYnP7TDbg.3gp.part, file:///home/c/downloads/youtube/Trump%20escape%20-%20Tens%20of%20thousands%20rush%20to%20remote%20island%20website%20offering%20rescue%20if%20candidate%20wins-byi2qAA9WBA.3gp, file:///home/c/downloads/youtube/Trump%20defies%20time%20and%20space%20with%20ambitious%20pope%20retort-ZIbhBeGEID4.3gp.part, file:///home/c/downloads/youtube/Fuller%20House%27s%20Lori%20Loughlin%20Surprises%20Candace%20Cameron%20Bure%20_%20The%20View-wt6mZIQdnU8.3gp, file:///home/c/downloads/youtube/KIller%20Mike%20on%20Having%20A%20Female%20President%20_%20The%20View-8bMndqfbdnk.3gp, file:///home/c/downloads/youtube/Donald%20Trump%27s%202002%20Iraq%20Invasion%20Remarks%20Return%20_%20Morning%20Joe%20_%20MSNBC-_EswntBChsw.3gp, file:///home/c/downloads/youtube/HARDBALL%202%2019%202016%20%20Bernie%20Sanders%20has%20gained%20momentum%20and%20the%20numbers-emdwZqg48bg.3gp.part, file:///home/c/downloads/youtube/MTP%20DAILY%202_19_16%20Pope%20Suggests%20Trump%20Policy%20%27Not%20Christian%27-604p01gWklc.3gp.part, file:///home/c/downloads/youtube/saved/Mad%20Max%20Fury%20Road%20-%20Deleted%20scene%20and%20Adult%20Scene-thT-HbvpKYI.mp4, file:///home/c/downloads/youtube/Clinton%20goes%20on%20%E2%80%98tearful%20kid%20stunt%E2%80%99%2C%20strikingly%20similar%20to%20Merkel-sAlY59EeyIw.3gp, file:///home/c/downloads/youtube/The%20Kelly%20File%202_18_16%20-%20Megyn%20Kelly%20on%20Donald%20Trump%20vs%20The%20Pope%2C%20Marco%20Rubio%20Nikki%20Haley%20interview-5OBQ8YXvMls.3gp.part, file:///home/c/downloads/youtube/Donald%20Trump%20vs%20The%20Pope%20-%20On%20the%20Record%20with%20Greta%20Van%20Susteren-8jquthz-uUA.3gp.part
+times=0, 0, 0, 0, 0, 0, 0, 0, 578774, 0, 137135, 0, 100560, 0, 650546, 0, 0, 0, 0, 67726, 0, 49950, 0, 132510, 0, 395960, 0, 0, 0, 0
+
+[ToolbarProfiles]
+1\ProfileName=VLC 2.x.x Style
+1\Value="0|64;39;64;38;65;|0-2;64;3;1;4;64;7;9;64;10;20;19;64-4;37;65;35-4;|12;11;13;14;|43;33-4;44;|0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+2\ProfileName=VLC 1.1.x Style
+2\Value="0|64;39;64;38;65;|0-2;64;3;1;4;64;7;10;9;64-4;20;19;64-4;37;65;35-4;|12;11;13;14;|5-1;33;6-1;|0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+3\ProfileName=VLC 0.8.x Style
+3\Value="1|64;39-1;64;38;|2-1;32-4;0-5;1-5;32-5;3-5;5-5;6-5;4-5;32-5;10-1;64-1;35-1;65;|12-1;11-1;13-1;14-1;|33;37-4;|0-5;1-5;32-1;1-5;5-1;6-1;4-5;32-1;12-5;11-1;65;34-4;35-1;"
+4\ProfileName=Minimalist Style
+4\Value="0|64;65;|0-7;64;3-1;1-5;4-1;64;12-5;64-5;37-5;38-5;64-4;10-1;65;36-4;|11-5;13-5;14-5;|5-1;33;6-1;|0-5;64;3-5;1-5;4-5;64;12-5;65;34-4;35-1;"
+5\ProfileName=One-Liner Style
+5\Value="0|64;38;65;|0-4;64;3;1;4;64;7;10;9;64-4;39;64-4;37;65;36-4;|12;11;14;13;|5-1;33;6-1;|0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+6\ProfileName=Simplest Style
+6\Value="0||36-4;65-4;0-7;4-5;1-5;65-4;7-5;|12-4;11;13;||36-4;65-4;0-5;4-5;1-5;65;8-5;"
+size=6
+
+[playlistdialog]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xdd\0\0\0\0\0\0\x3z\0\0\x3\x1\0\0\x1\xde\0\0\0\x1\0\0\x3y\0\0\x3\0\0\0\0\0\0\0\0\0\x5V)
