--- a/osca/etc/skel/.config/lxterminal/lxterminal.conf
+++ b/osca/etc/skel/.config/lxterminal/lxterminal.conf
@@ -5,7 +5,7 @@ selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
 disablef10=true
 bgcolor=#000000000000
-bgalpha=0
+bgalpha=1
 fgcolor=#aaaaaaaaaaaa
 disallowbold=false
 cursorblinks=false
@@ -16,3 +16,17 @@ hidescrollbar=true
 hidemenubar=true
 hideclosebutton=true
 disablealt=false
+hidepointer=false
+
+[shortcut]
+new_window_accel=<CTRL><SHIFT>N
+new_tab_accel=<CTRL><SHIFT>T
+close_tab_accel=<CTRL><SHIFT>W
+close_window_accel=<CTRL><SHIFT>Q
+copy_accel=<CTRL><SHIFT>C
+paste_accel=<CTRL><SHIFT>V
+name_tab_accel=<CTRL><SHIFT>I
+previous_tab_accel=<CTRL>Page_Up
+next_tab_accel=<CTRL>Page_Down
+move_tab_left_accel=<CTRL><SHIFT>Page_Up
+move_tab_right_accel=<CTRL><SHIFT>Page_Down
