--- a/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
+++ b/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
@@ -1,7 +1,7 @@
 [General]
 IsFirstRun=0
 filedialog-path=/home/c/downloads
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\\\xff\xff\xff\xff\0\0\x3\xb7\0\0\0\xd4\0\0\x1]\0\0\0\0\0\0\x3\xb6\0\0\0\xd3\0\0\0\0\0\0\0\0\x5V)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\xd5\0\0\0\0\0\0\x3\x30\0\0\0\x45\0\0\0\xd6\0\0\0\x1\0\0\x3/\0\0\0\x44\0\0\0\0\0\0\0\0\x5V)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xd1\0\0\0\xf4\0\0\x3\x85\0\0\x2\r\0\0\x1\xd2\0\0\0\xf5\0\0\x3\x84\0\0\x2\f\0\0\0\0\0\0\0\0\x5V)
@@ -14,6 +14,9 @@ pos=@Point(495 696)
 screen=@Rect(0 0 1366 768)
 wide=false
 
+[Help]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xb1\0\0\0\x9f\0\0\x3\xa6\0\0\x2\x62\0\0\x1\xb2\0\0\0\xa0\0\0\x3\xa5\0\0\x2\x61\0\0\0\0\0\0\0\0\x5V)
+
 [MainWindow]
 AdvToolbar=
 FSCtoolbar="0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
@@ -21,13 +24,13 @@ InputToolbar="43;33-4;44;"
 MainToolbar1=
 MainToolbar2="3-4;5-4;0-4;6-4;4-4;7;9;10;20;13-4;19;14-4;42-4;34-4;35-4;"
 QtStyle=System's default
-ShowRemainingTime=false
+ShowRemainingTime=true
 ToolbarPos=false
 adv-controls=0
-bgSize=@Size(940 700)
+bgSize=@Size(602 0)
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\0\0\0\0)
 pl-dock-status=false
-playlist-visible=false
+playlist-visible=true
 playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
@@ -39,18 +42,18 @@ advanced=false
 size=@Size(526 400)
 
 [Playlist]
-headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x1\xff\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
+headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\x2\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\x1\xff\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
 leftSplitterGeometry=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc0\0\0\0\x80\x1\0\0\0\x4\x1\0\0\0\x2\x1)
 splitterSizes=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\x2T\x1\0\0\0\x4\x1\0\0\0\x1\x1)
 view-mode=1
 zoom=0
 
 [Preferences]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2&\0\0\0\x1b\0\0\x5G\0\0\x2\xd8\0\0\x2'\0\0\0\x1c\0\0\x5\x46\0\0\x2\xd7\0\0\0\0\0\0\0\0\x5V)
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\x1b\0\0\0\"\0\0\x4<\0\0\x2\xdf\0\0\x1\x1c\0\0\0#\0\0\x4;\0\0\x2\xde\0\0\0\0\0\0\0\0\x5V)"
 
 [RecentsMRL]
-list=file:///home/c/downloads/youtube/Full%20Show%20-%20Get%20Ready%20For%20The%20Real%20Rise%20of%20the%20Resistance%20-%2002_19_2016-rpIrzCXndnE.3gp.part, file:///home/c/downloads/youtube/Roger%20Stone%20-%20Scalia%20Death%20Could%20Be%20Coup%20D%27etat-SI51eg4tKAU.3gp, file:///home/c/downloads/youtube/Decision%20Day%20In%20South%20Carolina%20-%20Republican%20Candidates%20Making%20Final%20Push%20%20For%20Votes%20-%20Outnumbered-D6Xt9u6GofI.3gp, file:///home/c/downloads/youtube/Decision%20Day%20In%20South%20Carolina%20-%20Republican%20Candidates%20Making%20Final%20Push%20%20For%20Votes%20-%20Outnumbered-D6Xt9u6GofI.3gp.part, file:///home/c/downloads/youtube/Jeb%20Bush%20Makes%20Final%20Push%20In%20South%20Carolina%20Day%20-%20Happening%20Now-mAysDGrGjO8.3gp, file:///home/c/downloads/youtube/Avella%20-%20Trump%20Likely%20To%20Win%20SC%2C%20Cruz%20%26%20Rubio%20Fight%20For%20Same%20Voters%20-%20Happening%20Now-grCxxiUsTRo.3gp, file:///home/c/downloads/youtube/Avella%20-%20Trump%20Likely%20To%20Win%20SC%2C%20Cruz%20%26%20Rubio%20Fight%20For%20Same%20Voters%20-%20Happening%20Now-grCxxiUsTRo.3gp.part, file:///home/c/downloads/youtube/MORNING%20JOE%202_20_16%20Jane%20Sanders%20on%20tossup%20race%20in%20NV-nHM31BvgaTI.3gp.part, file:///home/c/downloads/youtube/Peter%20Schiff%20-%20Fed%20Only%20Delaying%20Financial%20Collapse%21-9PK90YGoxms.3gp.part, file:///home/c/downloads/youtube/Kasich%20on%20Obama%20missing%20Scalia%27s%20funeral%2C%20SCOTUS%20nomination-8NxPF4r1r9E.3gp.part, file:///home/c/downloads/youtube/Veterans%20debate%20which%20candidate%20should%20be%20commander%20in%20chief-EpYQV7rZgEs.3gp.part, file:///home/c/downloads/youtube/Rubio%20warns%20SC%20voters%20to%20be%20wary%20of%20primary%20tricks%20by%20Cruz-NFLouQjfthc.3gp.part, file:///home/c/downloads/youtube/Ted%20Cruz%27s%20father%20-%20An%20%27army%27%20of%20SC%20pastors%20endorse%20my%20son-_RQrKk8k4do.3gp, file:///home/c/downloads/youtube/Keiser%20Report%20-%20War%20on%20Cash%20%28Episode%20878%29-wD1dnu8IJ4M.3gp, file:///home/c/downloads/youtube/Hannity%202_19_16%20-%20Sean%20Hannity%20interview%20with%20Ted%20Cruz%20Heidi%20Cruz%20%26%20Marco%20Rubio%20Nikki%20Haley-7FruC7qKTrg.3gp.part, file:///home/c/downloads/youtube/Black%20Lives%20Matter%20Boss%20Is%20An%20Old%20White%20Nazi%20Worth%20Billions-65P0P4_bSwQ.3gp, file:///home/c/downloads/youtube/The%20O%27Reilly%20Factor%202_19_16%20-%20Donald%20Trump%20calls%20for%20Apple%20boycott%2C%20Nevada%20%26%20South%20Carolina%20Primary-leTXClm3HFI.3gp.part, file:///home/c/downloads/youtube/Europe%E2%80%99s%20scariest%20airport%20-%20Incredible%20pilot%20skills%20as%20planes%20try%20to%20land%20in%20crazy%20crosswinds-ArGS5yp4ED4.3gp, file:///home/c/downloads/youtube/The%20Kelly%20File%20%202_19_16%20-%20Megyn%20Kelly%20checks%20Donald%20Trump%20claims%2C%20Marco%20Rubio%20Ted%20Cruz%20interview-GAyIcPtDG3w.3gp.part, file:///home/c/downloads/youtube/RACHEL%20MADDOW%20_HARDBALL%202_20_16%20Obama%20legacy%20newly%20significant%20in%20Democratic%20race-TUmYE2seLIY.3gp.part, file:///home/c/downloads/youtube/WTF%21%20Why%20Scalia%27s%20Death%20Doesn%27t%20Add%20Up-oi1BAxeKR1w.3gp.part, file:///home/c/downloads/youtube/It%27s%20Morning%20Again%20In%20Canada-L5ZwtSwSX3Q.3gp, file:///home/c/downloads/youtube/politico%20news%2002_20_2016%20%20Donald%20Trump%20softens%20his%20tone%20after%20feud%20with%20Pope%20Francis-CtfeewthGsU.3gp, file:///home/c/downloads/youtube/politico%20news%2002_20_2016%20%20Donald%20Trump%20softens%20his%20tone%20after%20feud%20with%20Pope%20Francis-CtfeewthGsU.3gp.part, file:///home/c/downloads/youtube/Judge%20To%20Hear%20Case%20On%20Cruz%20Eligibility%20-%20The%20Kelly%20File-vyUQonYief4.3gp.part, file:///home/c/downloads/youtube/Kasich%20-%20Spirit%20of%20America%20is%20about%20connecting%20with%20others-7Yy4lj2R8cg.3gp.part, file:///home/c/downloads/youtube/Killer%20Mike%20Weighs%20In%20On%20Hot%20Topics%20_%20After%20The%20View-dKOFM9udZ6U.3gp, file:///home/c/downloads/youtube/MORNING%20JOE%202%2019%202016%20Was%20the%20pope%20%27over%20his%20skis%27%20on%20Trump%20remark-Hg5seqnP3Xg.3gp.part, file:///home/c/downloads/youtube/The%20Infowars%20Nightly%20News.The%20Pope%20Just%20Wants%20To%20Keep%20His%20Walls%20FULLSHOW-KKkKtDRKUUA.3gp.part, file:///home/c/downloads/youtube/FULL%20CNN%20GOP%20Town%20Hall%20-%20John%20Kasich%20P1%2C%20CNN%20Republican%20Presidential%20Town%20Hall%20February%2018%2C%202016-eQlYWVyB_2w.3gp
-times=-1, 291195, 0, 0, 0, 0, 0, 0, 609800, 0, -1, 0, 0, 615650, 171472, 0, 0, 44460, 0, 0, 907807, 0, 0, 0, 0, 0, 0, 0, 0, 0
+list=file:///home/c/downloads/youtube/MORNING%20JOE%2002_24_2016%20DONALD%20%20Trump%20media%20hatred%20pulls%20people%20to%20him-wGx-f9WQbQQ.3gp.part, file:///home/c/downloads/youtube/CBS%20Planning%20Hit%20Piece%20On%20Trump's%20So-Called%20Ties%20To%20The%20Mafia-85P_assYDVs.3gp, file:///home/c/downloads/youtube/Mika%20-%20Donald%20Trump%20Media%20Hatred%20Pulls%20People%20To%20Him%20_%20Morning%20Joe%20_%20MSNBC-p7U80TdP5iw.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20-%20%E2%80%98I%20Might%20Tone%20Down%E2%80%99%20My%20Style%20As%20President%20_%20TODAY-MHKJPZ8lYCA.3gp, file:///home/c/downloads/youtube/Will%20Labor%20Secretary%20Tom%20Perez%20replace%20Justice%20Scalia-GNE7ZbMvsgs.3gp, file:///home/c/downloads/youtube/Voters%20Attend%20Caucus%20Training%20In%20Nevada%20_%20MSNBC-mo4rnNBY4r8.3gp, file:///home/c/downloads/youtube/Madonna%20Takes%20To%20Instagram%20To%20Let%20Son%20Rocco%20Know%20She%20Misses%20Him%20%28TMZ%20TV%29-PP6wyppdG6I.3gp, file:///home/c/downloads/youtube/Court%20of%20Public%20Opinion%20-%20The%20Trial%20of%20Bill%20Cosby%20_%20Inside%20Amy%20Schumer-ZbIcNVlEiSM.3gp, file:///home/c/downloads/youtube/Mika%20-%20Donald%20Trump%20Media%20Hatred%20Pulls%20People%20To%20Him%20_%20Morning%20Joe%20_%20MSNBC-p7U80TdP5iw.3gp.part, file:///home/c/downloads/youtube/Tony%20Blair%20-%20We%20should%20vote%20to%20stay-8Iu2YT4gjYQ.3gp, file:///home/c/downloads/youtube/Party%20Foiled%20-%20Supporter%20Tries%20Sneaking%20Beer%20Into%20Trump%20Hotel%20-%20Fox%20%26%20Friends-mo0vExQhDE0.3gp, file:///home/c/downloads/youtube/Bill%20%26%20Melinda%20Gates%27%20Viral%20Video%20-%20GatesLetter.com-3aiW-bjpuws.3gp, file:///home/c/downloads/youtube/Hannity%202_23_16%20-%20Sean%20Hannity%20at%20Donald%20Trump%20Nevada%20Caucus%20HQ%2C%20Donald%20Trump%20wins%20Nevada-_GDVIzfS80M.3gp.part, file:///home/c/downloads/youtube/The%20O%27Reilly%20Factor%202_23_16%20-%20Donald%20Trump%20wins%20Nevada%20Caucus%2C%20Obama%20closed%20Gitmo-5PP5jcZ2UYU.3gp, file:///home/c/downloads/youtube/Cruz%20-%20We%27re%20the%20only%20campaign%20that%20can%20beat%20Donald%20Trump-r47OTrPScV0.3gp, file:///home/c/downloads/youtube/Saint%20West%20Visits%20Jimmy%20Kimmel%20Live--4LfkSXNplI.3gp, file:///home/c/downloads/youtube/Bill%20and%20Melinda%20Gates%20Want%20Energy%20and%20Time%20Superpowers-jEPiMFW-FjI.3gp, file:///home/c/downloads/youtube/Bill%20and%20Melinda%20Gates%20Want%20Energy%20and%20Time%20Superpowers-jEPiMFW-FjI.3gp.part, file:///home/c/downloads/youtube/The%20O%27Reilly%20Factor%202_23_16%20-%20Donald%20Trump%20wins%20Nevada%20Caucus%2C%20Obama%20closed%20Gitmo-5PP5jcZ2UYU.3gp.part, file:///home/c/downloads/youtube/Behind%20The%20Scenes%20at%20Hannity%20With%20Trump%20-%20Hillary%20Fighting%20For%20Her%20Life-5WSu3vuIyKc.3gp, file:///home/c/downloads/youtube/This%20Is%20Not%20Happening%20-%20Ari%20Shaffir%20%26%20Mat%20Edgar%20-%20Camping%20on%20Mushrooms%20-%20Uncensored-b_mdvsEF3vo.3gp, file:///home/c/downloads/youtube/The%20Daily%20Show%20-%20Uganda%20-%20Even%20Worse%20at%20Elections%20Than%20America-9Z4lQ4k_BQ8.3gp, file:///home/c/downloads/youtube/Free%20pass%20Goldberg%20says%20media%20are%20going%20too%20easy%20on%20Trump-ByXC64TXLug.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20Wins%20Nevada%20Caucuses%20-%20America%27s%20Election%20HQ-JpN3ZAo6nx4.3gp, file:///home/c/downloads/youtube/Trump%20-%20You%27re%20going%20to%20be%20proud%20of%20your%20president-aBC-B4ZILTk.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20wins%20the%20Nevada%20caucuses-ZAR11GYZPhM.3gp.part, file:///home/c/downloads/youtube/The%20Daily%20Show%20-%202_22_16%20in%20%20-60%20Seconds-cavt7IINUkM.3gp, file:///home/c/downloads/youtube/This%20Is%20Not%20Happening%20-%20Ari%20Shaffir%20&%20Mat%20Edgar%20-%20Camping%20on%20Mushrooms%20-%20Uncensored-b_mdvsEF3vo.3gp, file:///home/c/downloads/youtube/The%20Nightly%20Show%20-%202_22_16%20in%20%20-60%20Seconds-Zgfv_XYuv7Q.3gp, file:///home/c/downloads/youtube/3-Way%20GOP%20Race%20-%20Cruz%20Asks%20Comm%20Dir%20To%20Step%20Down%20After%20Tweeting%20False%20Rubio%20Story%20-%20The%20Five-v_Skw0avbkI.3gp
+times=-1, 0, 0, 15000, 0, 0, 54073, 34760, 0, 0, 0, 52251, 0, 0, 71271, 68463, 23423, 0, 1063108, 20636, 0, 125925, 0, 0, 0, 0, 0, 131860, 0, 0
 
 [ToolbarProfiles]
 1\ProfileName=VLC 2.x.x Style
@@ -67,5 +70,8 @@ times=-1, 291195, 0, 0, 0, 0, 0, 0, 609800, 0, -1, 0, 0, 615650, 171472, 0, 0, 4
 6\Value="0||36-4;65-4;0-7;4-5;1-5;65-4;7-5;|12-4;11;13;||36-4;65-4;0-5;4-5;1-5;65;8-5;"
 size=6
 
+[gototimedialog]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2?\0\0\x1V\0\0\x3\x18\0\0\x1\xaa\0\0\x2@\0\0\x1W\0\0\x3\x17\0\0\x1\xa9\0\0\0\0\0\0\0\0\x5V)
+
 [playlistdialog]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xdd\0\0\0\0\0\0\x3z\0\0\x3\x1\0\0\x1\xde\0\0\0\x1\0\0\x3y\0\0\x3\0\0\0\0\0\0\0\0\0\x5V)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x4\x82\xff\xff\xff\xff\0\0\x6\x1f\0\0\x3\0\0\0\x4\x83\0\0\0\0\0\0\x6\x1e\0\0\x2\xff\0\0\0\0\0\0\0\0\x5V)
