--- a/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
+++ b/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
@@ -1,7 +1,6 @@
 [General]
 IsFirstRun=0
-filedialog-path=/home/c/downloads
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\xd5\0\0\0\0\0\0\x3\x30\0\0\0\x45\0\0\0\xd6\0\0\0\x1\0\0\x3/\0\0\0\x44\0\0\0\0\0\0\0\0\x5V)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0u\xff\xff\xff\xff\0\0\x4\"\0\0\x3\0\0\0\0v\0\0\0\0\0\0\x4!\0\0\x2\xff\0\0\0\0\0\0\0\0\x5V)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xd1\0\0\0\xf4\0\0\x3\x85\0\0\x2\r\0\0\x1\xd2\0\0\0\xf5\0\0\x3\x84\0\0\x2\f\0\0\0\0\0\0\0\0\x5V)
@@ -27,7 +26,7 @@ QtStyle=System's default
 ShowRemainingTime=true
 ToolbarPos=false
 adv-controls=0
-bgSize=@Size(602 0)
+bgSize=@Size(940 700)
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\0\0\0\0)
 pl-dock-status=false
 playlist-visible=true
@@ -42,7 +41,7 @@ advanced=false
 size=@Size(526 400)
 
 [Playlist]
-headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\x2\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\x1\xff\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
+headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\n\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\x1\xff\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
 leftSplitterGeometry=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc0\0\0\0\x80\x1\0\0\0\x4\x1\0\0\0\x2\x1)
 splitterSizes=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\x2T\x1\0\0\0\x4\x1\0\0\0\x1\x1)
 view-mode=1
@@ -52,8 +51,8 @@ zoom=0
 geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\x1b\0\0\0\"\0\0\x4<\0\0\x2\xdf\0\0\x1\x1c\0\0\0#\0\0\x4;\0\0\x2\xde\0\0\0\0\0\0\0\0\x5V)"
 
 [RecentsMRL]
-list=file:///home/c/downloads/youtube/MORNING%20JOE%2002_24_2016%20DONALD%20%20Trump%20media%20hatred%20pulls%20people%20to%20him-wGx-f9WQbQQ.3gp.part, file:///home/c/downloads/youtube/CBS%20Planning%20Hit%20Piece%20On%20Trump's%20So-Called%20Ties%20To%20The%20Mafia-85P_assYDVs.3gp, file:///home/c/downloads/youtube/Mika%20-%20Donald%20Trump%20Media%20Hatred%20Pulls%20People%20To%20Him%20_%20Morning%20Joe%20_%20MSNBC-p7U80TdP5iw.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20-%20%E2%80%98I%20Might%20Tone%20Down%E2%80%99%20My%20Style%20As%20President%20_%20TODAY-MHKJPZ8lYCA.3gp, file:///home/c/downloads/youtube/Will%20Labor%20Secretary%20Tom%20Perez%20replace%20Justice%20Scalia-GNE7ZbMvsgs.3gp, file:///home/c/downloads/youtube/Voters%20Attend%20Caucus%20Training%20In%20Nevada%20_%20MSNBC-mo4rnNBY4r8.3gp, file:///home/c/downloads/youtube/Madonna%20Takes%20To%20Instagram%20To%20Let%20Son%20Rocco%20Know%20She%20Misses%20Him%20%28TMZ%20TV%29-PP6wyppdG6I.3gp, file:///home/c/downloads/youtube/Court%20of%20Public%20Opinion%20-%20The%20Trial%20of%20Bill%20Cosby%20_%20Inside%20Amy%20Schumer-ZbIcNVlEiSM.3gp, file:///home/c/downloads/youtube/Mika%20-%20Donald%20Trump%20Media%20Hatred%20Pulls%20People%20To%20Him%20_%20Morning%20Joe%20_%20MSNBC-p7U80TdP5iw.3gp.part, file:///home/c/downloads/youtube/Tony%20Blair%20-%20We%20should%20vote%20to%20stay-8Iu2YT4gjYQ.3gp, file:///home/c/downloads/youtube/Party%20Foiled%20-%20Supporter%20Tries%20Sneaking%20Beer%20Into%20Trump%20Hotel%20-%20Fox%20%26%20Friends-mo0vExQhDE0.3gp, file:///home/c/downloads/youtube/Bill%20%26%20Melinda%20Gates%27%20Viral%20Video%20-%20GatesLetter.com-3aiW-bjpuws.3gp, file:///home/c/downloads/youtube/Hannity%202_23_16%20-%20Sean%20Hannity%20at%20Donald%20Trump%20Nevada%20Caucus%20HQ%2C%20Donald%20Trump%20wins%20Nevada-_GDVIzfS80M.3gp.part, file:///home/c/downloads/youtube/The%20O%27Reilly%20Factor%202_23_16%20-%20Donald%20Trump%20wins%20Nevada%20Caucus%2C%20Obama%20closed%20Gitmo-5PP5jcZ2UYU.3gp, file:///home/c/downloads/youtube/Cruz%20-%20We%27re%20the%20only%20campaign%20that%20can%20beat%20Donald%20Trump-r47OTrPScV0.3gp, file:///home/c/downloads/youtube/Saint%20West%20Visits%20Jimmy%20Kimmel%20Live--4LfkSXNplI.3gp, file:///home/c/downloads/youtube/Bill%20and%20Melinda%20Gates%20Want%20Energy%20and%20Time%20Superpowers-jEPiMFW-FjI.3gp, file:///home/c/downloads/youtube/Bill%20and%20Melinda%20Gates%20Want%20Energy%20and%20Time%20Superpowers-jEPiMFW-FjI.3gp.part, file:///home/c/downloads/youtube/The%20O%27Reilly%20Factor%202_23_16%20-%20Donald%20Trump%20wins%20Nevada%20Caucus%2C%20Obama%20closed%20Gitmo-5PP5jcZ2UYU.3gp.part, file:///home/c/downloads/youtube/Behind%20The%20Scenes%20at%20Hannity%20With%20Trump%20-%20Hillary%20Fighting%20For%20Her%20Life-5WSu3vuIyKc.3gp, file:///home/c/downloads/youtube/This%20Is%20Not%20Happening%20-%20Ari%20Shaffir%20%26%20Mat%20Edgar%20-%20Camping%20on%20Mushrooms%20-%20Uncensored-b_mdvsEF3vo.3gp, file:///home/c/downloads/youtube/The%20Daily%20Show%20-%20Uganda%20-%20Even%20Worse%20at%20Elections%20Than%20America-9Z4lQ4k_BQ8.3gp, file:///home/c/downloads/youtube/Free%20pass%20Goldberg%20says%20media%20are%20going%20too%20easy%20on%20Trump-ByXC64TXLug.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20Wins%20Nevada%20Caucuses%20-%20America%27s%20Election%20HQ-JpN3ZAo6nx4.3gp, file:///home/c/downloads/youtube/Trump%20-%20You%27re%20going%20to%20be%20proud%20of%20your%20president-aBC-B4ZILTk.3gp, file:///home/c/downloads/youtube/Donald%20Trump%20wins%20the%20Nevada%20caucuses-ZAR11GYZPhM.3gp.part, file:///home/c/downloads/youtube/The%20Daily%20Show%20-%202_22_16%20in%20%20-60%20Seconds-cavt7IINUkM.3gp, file:///home/c/downloads/youtube/This%20Is%20Not%20Happening%20-%20Ari%20Shaffir%20&%20Mat%20Edgar%20-%20Camping%20on%20Mushrooms%20-%20Uncensored-b_mdvsEF3vo.3gp, file:///home/c/downloads/youtube/The%20Nightly%20Show%20-%202_22_16%20in%20%20-60%20Seconds-Zgfv_XYuv7Q.3gp, file:///home/c/downloads/youtube/3-Way%20GOP%20Race%20-%20Cruz%20Asks%20Comm%20Dir%20To%20Step%20Down%20After%20Tweeting%20False%20Rubio%20Story%20-%20The%20Five-v_Skw0avbkI.3gp
-times=-1, 0, 0, 15000, 0, 0, 54073, 34760, 0, 0, 0, 52251, 0, 0, 71271, 68463, 23423, 0, 1063108, 20636, 0, 125925, 0, 0, 0, 0, 0, 131860, 0, 0
+list=@Invalid()
+times=@Invalid()
 
 [ToolbarProfiles]
 1\ProfileName=VLC 2.x.x Style
@@ -74,4 +73,4 @@ size=6
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2?\0\0\x1V\0\0\x3\x18\0\0\x1\xaa\0\0\x2@\0\0\x1W\0\0\x3\x17\0\0\x1\xa9\0\0\0\0\0\0\0\0\x5V)
 
 [playlistdialog]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x4\x82\xff\xff\xff\xff\0\0\x6\x1f\0\0\x3\0\0\0\x4\x83\0\0\0\0\0\0\x6\x1e\0\0\x2\xff\0\0\0\0\0\0\0\0\x5V)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xe2\0\0\0\0\0\0\x3t\0\0\x3\x1\0\0\x1\xe3\0\0\0\x1\0\0\x3s\0\0\x3\0\0\0\0\0\0\0\0\0\x5V)
