--- a/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
+++ b/osca/etc/skel/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 IsFirstRun=0
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0u\xff\xff\xff\xff\0\0\x4\"\0\0\x3\0\0\0\0v\0\0\0\0\0\0\x4!\0\0\x2\xff\0\0\0\0\0\0\0\0\x5V)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\xd5\0\0\0\0\0\0\x4\x82\0\0\x3\x1\0\0\0\xd6\0\0\0\x1\0\0\x4\x81\0\0\x3\0\0\0\0\0\0\0\0\0\x5V)
 
 [Bookmarks]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xd1\0\0\0\xf4\0\0\x3\x85\0\0\x2\r\0\0\x1\xd2\0\0\0\xf5\0\0\x3\x84\0\0\x2\f\0\0\0\0\0\0\0\0\x5V)
@@ -28,9 +28,9 @@ ToolbarPos=false
 adv-controls=0
 bgSize=@Size(940 700)
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\x1\xd5\0\0\x1I\0\0\x3\x7f\0\0\x1\xb5\0\0\0\0\0\0)
-pl-dock-status=false
-playlist-visible=true
-playlistSize=@Size(-1 -1)
+pl-dock-status=true
+playlist-visible=false
+playlistSize=@Size(940 700)
 status-bar-visible=false
 
 [Mediainfo]
@@ -41,7 +41,7 @@ advanced=false
 size=@Size(526 400)
 
 [Playlist]
-headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\n\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\x1\xff\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
+headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\v\xec\a\0\0\0\b\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\x3\xa4\0\0\0\v\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\x1K\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x2\t\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8)
 leftSplitterGeometry=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc0\0\0\0\x80\x1\0\0\0\x4\x1\0\0\0\x2\x1)
 splitterSizes=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\x2T\x1\0\0\0\x4\x1\0\0\0\x1\x1)
 view-mode=1
@@ -73,4 +73,4 @@ size=6
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2?\0\0\x1V\0\0\x3\x18\0\0\x1\xaa\0\0\x2@\0\0\x1W\0\0\x3\x17\0\0\x1\xa9\0\0\0\0\0\0\0\0\x5V)
 
 [playlistdialog]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xe2\0\0\0\0\0\0\x3t\0\0\x3\x1\0\0\x1\xe3\0\0\0\x1\0\0\x3s\0\0\x3\0\0\0\0\0\0\0\0\0\x5V)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\xe2\0\0\0\0\0\0\x3r\0\0\x2\xff\0\0\x1\xe2\0\0\0\0\0\0\x3r\0\0\x2\xff\0\0\0\0\0\0\0\0\x5V)
