--- a/osca/etc/skel/.config/gtk-2.0/gtkfilechooser.ini
+++ b/osca/etc/skel/.config/gtk-2.0/gtkfilechooser.ini
@@ -4,8 +4,8 @@ ShowHidden=false
 ShowSizeColumn=true
 GeometryX=0
 GeometryY=0
-GeometryWidth=852
-GeometryHeight=630
-SortColumn=modified
-SortOrder=descending
+GeometryWidth=552
+GeometryHeight=405
+SortColumn=name
+SortOrder=ascending
 StartupMode=recent
