--- a/osca/etc/skel/.config/pcmanfm/default/pcmanfm.conf
+++ b/osca/etc/skel/.config/pcmanfm/default/pcmanfm.conf
@@ -9,8 +9,8 @@ autorun=1
 [ui]
 always_show_tabs=0
 max_tab_chars=32
-win_width=641
-win_height=351
+win_width=768
+win_height=768
 splitter_pos=150
 media_in_new_tab=0
 desktop_folder_new_win=0
@@ -20,7 +20,7 @@ focus_previous=0
 side_pane_mode=hidden;places
 view_mode=icon
 show_hidden=0
-sort=name;ascending;
+sort=mtime;descending;
 toolbar=hidden;newtab;navigation;home;
 show_statusbar=0
 pathbar_mode_buttons=0
