--- a/osca/musem/pczero/Makefile
+++ b/osca/musem/pczero/Makefile
@@ -2,7 +2,7 @@ INSTALL_TO=/dev/sdb
 IMG=install.img
 BIN=pc.img
 SRC=pc.cc file.cc main.cc
-CC=g++ -m32 -O0
+CC=g++ -m32 -O0 -fno-pie
 CW=-Wall -Wextra -Wfatal-errors
 CF=-nostdlib -Wl,--oformat,binary -Wl,-Ttext,0x7c00
 
